--- a/final/static/css/main.css
+++ b/final/static/css/main.css
@@ -43,6 +43,36 @@ input[type="file"] {
     height: 50px;
     animation: spin 1s linear infinite;
 }
+#chartmain{
+    display: none;
+    width: 1000px;
+    height: 400px;
+}
+
+#Ramnit{
+    display: none;
+}
+#Vundo{
+    display: none;
+}
+#botnet{
+    display: none;
+}
+#Lollipop{
+    display: none;
+}
+#Simda{
+    display: none;
+}
+#Tracur{
+    display: none;
+}
+#Obfuscator{
+    display: none;
+}
+#Gatak{
+    display: none;
+}
 
 @keyframes spin {
     0% { transform: rotate(0deg); }
