--- a/final/templates/base 1.html
+++ b/final/templates/base 1.html
@@ -25,7 +25,8 @@
 </body>
 
 <footer>
-    <script src="{{ url_for('static', filename='js/main.js') }}" type="text/javascript"></script>    
+    <script src="{{ url_for('static', filename='js/changed.js') }}" type="text/javascript"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/echarts.js')}}"></script>    
 </footer>
 
 </html>
