--- a/final/templates/base1.html
+++ b/final/templates/base1.html
@@ -9,7 +9,8 @@
     <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">      
+    <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
+    <script src="{{ url_for('static', filename='js/echarts.min.js') }}" type="text/javascript"></script>      
 </head>
 
 <body>
@@ -25,7 +26,9 @@
 </body>
 
 <footer>
-    <script src="{{ url_for('static', filename='js/main.js') }}" type="text/javascript"></script>    
+    <script src="{{ url_for('static', filename='js/changed.js') }}" type="text/javascript"></script>
+    
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>      -->
 </footer>
 
 </html>
